[project]
name = "mopidy-workspace"
version = "0.1.0"
description = "Workspace for working across multiple Mopidy projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "mopidy",
  "mopidy-alsamixer",
  "mopidy-beets",
  "mopidy-local",
  "mopidy-mpd",
  "mopidy-mpris",
  "mopidy-nad",
  "mopidy-pandora",
  "mopidy-orfradio",
  "mopidy-scrobbler",
  "mopidy-soundcloud",
  "mopidy-spotify",
]

[tool.uv.sources]
mopidy = { workspace = true }
mopidy-alsamixer = { workspace = true }
mopidy-beets = { workspace = true }
mopidy-local = { workspace = true }
mopidy-mpd = { workspace = true }
mopidy-mpris = { workspace = true }
mopidy-nad = { workspace = true }
mopidy-pandora = { workspace = true }
mopidy-orfradio = { workspace = true }
mopidy-scrobbler = { workspace = true }
mopidy-soundcloud = { workspace = true }
mopidy-spotify = { workspace = true }

[tool.uv.workspace]
members = ["mopidy/", "ext/*"]
